[package]
name = "container-health-rs"
version = "0.1.0"
edition = "2021"
description = "Lightweight container health checker"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
